Add some methods, description, header, summary

--- a/student-alcohol-consumption/task.ipynb
+++ b/student-alcohol-consumption/task.ipynb
@@ -1,11 +1,89 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "## Projec theme: Student Alcohol Consumption\n",
+    "### Done by Alexander Vorontsov & Alexey Kazakov\n",
+    "#### Context:\n",
+    "The data were obtained in a survey of students math and portuguese language courses in secondary school. It contains a lot of interesting social, gender and study information about students. You can use it for some EDA or try to predict students final grade.\n",
+    "#### Dataset\n",
+    "Attributes for both student-mat.csv (Math course) and student-por.csv (Portuguese language course) datasets:\n",
+    "\n",
+    "school - student's school (binary: 'GP' - Gabriel Pereira or 'MS' - Mousinho da Silveira)\n",
+    "\n",
+    "sex - student's sex (binary: 'F' - female or 'M' - male)\n",
+    "\n",
+    "age - student's age (numeric: from 15 to 22)\n",
+    "\n",
+    "address - student's home address type (binary: 'U' - urban or 'R' - rural)\n",
+    "\n",
+    "famsize - family size (binary: 'LE3' - less or equal to 3 or 'GT3' - greater than 3)\n",
+    "\n",
+    "Pstatus - parent's cohabitation status (binary: 'T' - living together or 'A' - apart)\n",
+    "\n",
+    "Medu - mother's education (numeric: 0 - none, 1 - primary education (4th grade), 2 – 5th to 9th grade, 3 – secondary education or 4 – higher education)\n",
+    "\n",
+    "Fedu - father's education (numeric: 0 - none, 1 - primary education (4th grade), 2 – 5th to 9th grade, 3 – secondary education or 4 – higher education)\n",
+    "\n",
+    "Mjob - mother's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative or police), 'at_home' or 'other')\n",
+    "\n",
+    "Fjob - father's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative or police), 'at_home' or 'other')\n",
+    "\n",
+    "reason - reason to choose this school (nominal: close to 'home', school 'reputation', 'course' preference or 'other')\n",
+    "\n",
+    "guardian - student's guardian (nominal: 'mother', 'father' or 'other')\n",
+    "\n",
+    "traveltime - home to school travel time (numeric: 1 - <15 min., 2 - 15 to 30 min., 3 - 30 min. to 1 hour, or 4 - >1 hour)\n",
+    "\n",
+    "studytime - weekly study time (numeric: 1 - <2 hours, 2 - 2 to 5 hours, 3 - 5 to 10 hours, or 4 - >10 hours)\n",
+    "\n",
+    "failures - number of past class failures (numeric: n if 1<=n<3, else 4)\n",
+    "\n",
+    "schoolsup - extra educational support (binary: yes or no)\n",
+    "\n",
+    "famsup - family educational support (binary: yes or no)\n",
+    "\n",
+    "paid - extra paid classes within the course subject (Math or Portuguese) (binary: yes or no)\n",
+    "\n",
+    "activities - extra-curricular activities (binary: yes or no)\n",
+    "\n",
+    "nursery - attended nursery school (binary: yes or no)\n",
+    "\n",
+    "higher - wants to take higher education (binary: yes or no)\n",
+    "\n",
+    "internet - Internet access at home (binary: yes or no)\n",
+    "\n",
+    "romantic - with a romantic relationship (binary: yes or no)\n",
+    "\n",
+    "famrel - quality of family relationships (numeric: from 1 - very bad to 5 - excellent)\n",
+    "\n",
+    "freetime - free time after school (numeric: from 1 - very low to 5 - very high)\n",
+    "\n",
+    "goout - going out with friends (numeric: from 1 - very low to 5 - very high)\n",
+    "\n",
+    "Dalc - workday alcohol consumption (numeric: from 1 - very low to 5 - very high)\n",
+    "\n",
+    "Walc - weekend alcohol consumption (numeric: from 1 - very low to 5 - very high)\n",
+    "\n",
+    "health - current health status (numeric: from 1 - very bad to 5 - very good)\n",
+    "\n",
+    "absences - number of school absences (numeric: from 0 to 93)\n",
+    "\n",
+    "##### These grades are related with the course subject, Math or Portuguese:\n",
+    "\n",
+    "G1,G2,G3 - grades (numeric, from 0 to 20)\n",
+    "#### Goals\n",
+    "Research some methods and find the best predictor methods for average grade depeding on other features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import regular libraries\n",
@@ -25,10 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('student-mat.csv')"
@@ -583,7 +659,7 @@
     }
    ],
    "source": [
-    "# all features\n",
+    "# All features\n",
     "data.columns"
    ]
   },
@@ -595,7 +671,7 @@
    },
    "outputs": [],
    "source": [
-    "# merging weekends and weekdays consumption\n",
+    "# Merging weekends and weekdays consumption\n",
     "data['Walc'] = data['Walc'] + data['Dalc']"
    ]
   },
@@ -643,7 +719,7 @@
     }
    ],
    "source": [
-    "# romantic satus\n",
+    "# Romantic status\n",
     "f, ax = plt.subplots(figsize=(4, 4))\n",
     "plt.pie(data['romantic'].value_counts().tolist(), \n",
     "        labels=['No', 'Yes'], autopct='%1.1f%%', startangle=90)\n",
@@ -668,7 +744,7 @@
     }
    ],
    "source": [
-    "# gender balance\n",
+    "# Gender balance\n",
     "f, ax = plt.subplots(figsize=(4, 4))\n",
     "plt.pie(data['sex'].value_counts().tolist(), \n",
     "        labels=['M', 'F'], autopct='%1.1f%%', startangle=90)\n",
@@ -1182,10 +1258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# G_avg = average student grade\n",
@@ -1570,10 +1644,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeRegressor\n",
@@ -1585,10 +1657,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "y1 = data['G_avg']\n",
@@ -1597,10 +1667,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X1 = pd.get_dummies(X1)"
@@ -1762,21 +1830,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default Neural Network: \n",
+      "-0.25851867320142663\n",
+      "Tuned Neural Network:\n",
+      "0.1250229399910079\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neural_network import MLPRegressor\n",
     "mlp = MLPRegressor()\n",
+    "mlp1 = MLPRegressor(alpha=41,hidden_layer_sizes=(1000,1000,1000))\n",
     "msk = np.random.rand(len(X1)) < 0.8\n",
     "train_X = X1[msk]\n",
     "train_Y = y1[msk]\n",
     "test_X = X1[~msk]\n",
     "test_Y = y1[~msk]\n",
-    "mlp.fit(train_X, train_Y)\n"
+    "mlp.fit(train_X, train_Y)\n",
+    "mlp1.fit(train_X,train_Y)\n",
+    "\n",
+    "print('Default Neural Network: ')\n",
+    "print(mlp.score(test_X, test_Y))\n",
+    "print('Tuned Neural Network:')\n",
+    "print(mlp1.score(test_X, test_Y))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6) Regression using Support Vector Regressor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default Support Vector Regressor:\n",
+      "0.11058480127874237\n",
+      "Tuned Support Vector Regressor:\n",
+      "0.11341941336912209\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "clf = SVR()\n",
+    "\n",
+    "clf1 = SVR(C=1, cache_size=500, coef0=0.1, degree=5, epsilon=0.5, gamma='auto',\n",
+    "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)\n",
+    "clf.fit(train_X, train_Y)\n",
+    "clf1.fit(train_X, train_Y)\n",
+    "\n",
+    "print('Default Support Vector Regressor:')\n",
+    "print(clf.score(test_X, test_Y))\n",
+    "print('Tuned Support Vector Regressor:')\n",
+    "print(clf1.score(test_X, test_Y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7) Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have detected the main features that affects on the final grade:\n",
+    "    1. Number of past class failures, the higher the value - the higher the probability of having a worther grade\n",
+    "    2. Extra educational support, if no - more people are tend to have lower average grade\n",
+    "    3. Father job, when father is a teacher, the grade tend to be higher\n",
+    "\n",
+    "The dataset has a lot of features and not many data records, so we can experience fast overfitting and some methods could be more useful than others. \n",
+    "\n",
+    "We have found that the best methods (among tested ones) are:\n",
+    "    1. Neural Networks\n",
+    "    2. Support Vector Regressor\n",
+    "    3. Ridge regression (among other tested regressions)\n",
+    "\n",
+    "While the worsest are:\n",
+    "   1. Linear regression (The data isn't linear)\n",
+    "   2. Desicion tree regressor\n",
+    "   \n",
+    "At the end, all methods that being used could be tuned for having a better accuracy, but the overall trend should remains the same. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1795,7 +1954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
